# icftl-diagnostics

./: .gitignore  LICENSE  NOTICE.txt  README.md  requirements.txt  spec.scsl  test_program.py
InstrumentPythonSCSL/: .gitignore  NOTICE.txt  README.md  requirements.txt  setup.cfg
InstrumentPythonSCSL/InstrumentPythonSCSL/: __init__.py  __main__.py  instrument.py
InstrumentPythonSCSL/InstrumentPythonSCSL/CodeGenerators/: ConcreteStateVariable.py  DurationOfTransition.py  FunctionConcreteState.py  SignalAtTimestamp.py
InstrumentPythonSCSL/InstrumentPythonSCSL/Database/: result_schema.sql
InstrumentPythonSCSL/InstrumentPythonSCSL/Database/Adaptors/: __init__.py
SCFG/: LICENCE.txt  NOTICE.txt  README.md  licensing_information.txt  setup.cfg
SCFG/SCFG/: __init__.py  symbolic_states.py
SCFGPython/: NOTICE.txt  README.md  setup.cfg
SCFGPython/SCFGPython/: build.py  cli.py  prepare.py
SCFGPython/tests/: test_scfg.py
SCSL/: .gitignore  LICENCE.txt  NOTICE.txt  README.md  licensing information.txt  setup.cfg
SCSL/SCSL/Analysis/: __init__.py  search.py
SCSL/SCSL/Inspection/: cli.py  data_formatter.py
SCSL/SCSL/Inspection/Database/: database.py
SCSL/SCSL/Monitoring/: monitoring.py
SCSL/SCSL/Specifications/: __init__.py  builder.py  constraints.py  lhsLexer.py  lhsParser.py  lhsVisitor.py  pecl.g4  peclLexer.py  peclMultiSpec.g4  peclParser.py  predicates.py  scsl.g4  scslLexer.py  translator.py
SCSL/SCSL/TraceChecker/: __init__.py  cli.py  tracechecker.py
SCSL/precompiled_specifications/: spec1.py  spec2.py  spec3.py  spec4.py  spec5.py  spec6.py
SCSL/tests/: test_Specifications.py  test_TraceChecker.py
