[metadata]
name = SCFG
version = 0.0.1
author = Joshua Dawes
author_email = joshua.dawes@uni.lu
maintainer = Alexander Vatov
maintainer_email = alexander.vatov@uni.lu
description = Defines symbolic control flow graphs (SCFGs)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cosmos-devops.cloudlab.zhaw.ch/cosmos-devops/cosmos-tools/rv-for-gmv/SCFG
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = SCFG
install-requires =
    graphviz
python_requires = >=3.7
