[metadata]
name = SCFGPython
version = 0.0.2
author = Joshua Dawes
author_email = joshua.dawes@uni.lu
maintainer = Alexander Vatov
maintainer_email = alexander.vatov@uni.lu
description = Builds symbolic control flow graphs (SCFGs) for Python source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cosmos-devops.cloudlab.zhaw.ch/cosmos-devops/cosmos-tools/rv-for-gmv/SCFGPython
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = SCFGPython
install_requires = file:requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    generate-scfg = SCFGPython.cli:main
