[metadata]
name = SCSL
version = 0.0.2
author = Joshua Dawes
author_email = joshua.dawes@uni.lu
maintainer = Alexander Vatov
maintainer_email = alexander.vatov@uni.lu
description = Performs monitoring, trace checking, and Python code analysis for SCSL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cosmos-devops.cloudlab.zhaw.ch/cosmos-devops/cosmos-tools/rv-for-gmv/SCSL
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = SCSL, SCSL.Analysis, SCSL.Monitoring, SCSL.Specifications, SCSL.TraceChecker, SCSL.Inspection, SCSL.Inspection.Database, SCSL.Inspection.Database.Adaptors
install_requires = file:requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    scsl-check-trace = SCSL.TraceChecker.cli:main
    scsl-inspect = SCSL.Inspection.cli:main
